--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "clean": "rmdir node_modules & del package-lock.json & del yarn.lock & yarn install"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@types/node": "^20.2.3",
     "bootstrap": "^5.2.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
