--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@mui/material": "^5.13.0",
     "@types/node": "^20.2.3",
     "bootstrap": "^5.2.3",
-    "i": "^0.3.7",
     "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -27,7 +26,9 @@
     "react-router-dom": "^6.11.1",
     "react-swipeable-views": "^0.14.0",
     "resend": "^0.14.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "vite-plugin-pwa": "^0.15.1",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
