--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "vite preview --host",
     "clean": "rmdir node_modules & del package-lock.json & del yarn.lock & yarn install"
   },
   "dependencies": {
